[tool.poetry]
name = "mtg-familiars"
version = "0.1.0"
description = ""
authors = ["seano-vs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
google-generativeai = "^0.5.0"
rich = "^13.7.1"
ipykernel = "^6.29.4"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
